parallel teusday 29th

--- a/comp5426/Makefile
+++ b/comp5426/Makefile
@@ -1,4 +1,6 @@
-all: tut1 tut2 tut3
+EXECUTES=tut1 tut2 tut3 tut4
+
+all: $(EXECUTES)
 
 tut1: tutorial01.c
 	mpicc tutorial01.c -o tut1
@@ -8,3 +10,9 @@ tut2: tutorial02.c
 	
 tut3: tutorial03.c
 	mpicc tutorial03.c -o tut3
+
+tut4: tutorial04.c
+	mpicc tutorial04.c -o tut4
+
+clean:
+	rm -f $(EXECUTES)
