parallel tutorial week 7 TIME SURE DOES FLY

--- a/comp5426/Makefile
+++ b/comp5426/Makefile
@@ -1,4 +1,4 @@
-EXECUTES=tut1 tut2 tut3 tut4 tut5
+EXECUTES=tut1 tut2 tut3 tut4 tut5 tut6 tut7
 
 all: $(EXECUTES)
 
@@ -16,6 +16,12 @@ tut4: tutorial04.c
 
 tut5: tutorial05.c
 	mpicc tutorial05.c -o tut5
+
+tut6: tutorial06.c
+	mpicc tutorial06.c -o tut6
+
+tut7: tutorial07.c
+	mpicc tutorial07.c -o tut7
 
 clean:
 	rm -f $(EXECUTES)
