shoulda committed these last night

--- a/hons/docs/Makefile
+++ b/hons/docs/Makefile
@@ -3,6 +3,14 @@
 META=thesis.tex biblio.bib txSymbols.tex
 TEMPFI=thesis.temp.tex
 
+thesis.pdf: tIntroduction.tex tBackground.tex tExample.tex tSystems.tex tModel.tex tHardness.tex tAlgos.tex tExperiment.tex tRelated.tex tConclusion.tex $(META)
+	rm -f $(TEMPFI)
+	echo "\input{tIntroduction.tex}\n\input{tBackground.tex}\n\input{tExample.tex}\n\input{tSystems.tex}\n\input{tModel.tex}\n\input{tHardness.tex}\n\input{tAlgos.tex}\n\input{tExperiment.tex}\n\input{tRelated.tex}\n\input{tRelated.tex}" > $(TEMPFI)
+	pdflatex thesis.tex
+	bibtex thesis.aux
+	pdflatex thesis.tex
+	pdflatex thesis.tex
+
 introduction.pdf: tIntroduction.tex $(META)
 
 background.pdf: tBackground.tex $(META)
@@ -20,8 +28,22 @@ example.pdf: tExample.tex $(META)
 systems.pdf: tSystems.tex $(META)
 
 model.pdf: tModel.tex $(META)
+	rm -f $(TEMPFI)
+	echo "\input{tModel}" > $(TEMPFI)
+	cp thesis.tex model.tex
+	pdflatex model.tex
+	pdflatex model.tex
+	pdflatex model.tex
+	rm model.tex
 
 hardness.pdf: tHardness.tex $(META)
+	rm -f $(TEMPFI)
+	echo "\input{tHardness}" > $(TEMPFI)
+	cp thesis.tex hardness.tex
+	pdflatex hardness.tex
+	pdflatex hardness.tex
+	pdflatex hardness.tex
+	rm hardness.tex
 
 algos.pdf: tAlgos.tex $(META)
 
