Woot, made my first diagram

--- a/hons/docs/Makefile
+++ b/hons/docs/Makefile
@@ -1,66 +1,24 @@
-.PHONY: clean all generic
+.PHONY: clean all
 
-META=thesis.tex biblio.bib txSymbols.tex
-TEMPFI=thesis.temp.tex
+COMPONENTS=$(wildcard *.tex)
+FIGURES=$(wildcard figures/*.tex)
 
-thesis.pdf: tIntroduction.tex tBackground.tex tExample.tex tSystems.tex tModel.tex tHardness.tex tAlgos.tex tExperiment.tex tRelated.tex tConclusion.tex $(META)
-	rm -f $(TEMPFI)
-	echo "\input{tIntroduction.tex}\n\input{tBackground.tex}\n\input{tExample.tex}\n\input{tSystems.tex}\n\input{tModel.tex}\n\input{tHardness.tex}\n\input{tAlgos.tex}\n\input{tExperiment.tex}\n\input{tRelated.tex}\n\input{tConclusion.tex}" > $(TEMPFI)
-	pdflatex thesis.tex
-	bibtex thesis.aux
-	pdflatex thesis.tex
-	pdflatex thesis.tex
+THESISMAIN=thesis.tex
+BIBLIOMAIN=biblio.bib
+SYMBOLMAIN=txSymbols.tex
 
-introduction.pdf: tIntroduction.tex $(META)
+thesis.pdf: $(COMPONENTS) $(FIGURES)
+	latex $(THESISMAIN)
+	bibtex $(patsubst %.tex,%.aux,$(THESISMAIN))
+	latex $(THESISMAIN)
+	latex $(THESISMAIN)
+	dvips $(patsubst %.tex,%.dvi,$(THESISMAIN))
+	ps2pdf $(patsubst %.tex,%.ps,$(THESISMAIN))
 
-background.pdf: tBackground.tex $(META)
-	rm -f $(TEMPFI)
-	echo "\input{tBackground}" > $(TEMPFI)
-	cp thesis.tex background.tex
-	pdflatex background.tex
-	bibtex background.aux
-	pdflatex background.tex
-	pdflatex background.tex
-	rm background.tex
-
-example.pdf: tExample.tex $(META)
-
-systems.pdf: tSystems.tex $(META)
-
-model.pdf: tModel.tex $(META)
-	rm -f $(TEMPFI)
-	echo "\input{tModel}" > $(TEMPFI)
-	cp thesis.tex model.tex
-	pdflatex model.tex
-	pdflatex model.tex
-	pdflatex model.tex
-	rm model.tex
-
-hardness.pdf: tHardness.tex $(META)
-	rm -f $(TEMPFI)
-	echo "\input{tHardness}" > $(TEMPFI)
-	cp thesis.tex hardness.tex
-	pdflatex hardness.tex
-	pdflatex hardness.tex
-	pdflatex hardness.tex
-	rm hardness.tex
-
-algos.pdf: tAlgos.tex $(META)
-
-experiment.pdf: tExperiment.tex $(META)
-
-related.pdf: tRelated.tex $(META)
-	rm -f $(TEMPFI)
-	echo "\input{tRelated}" > $(TEMPFI)
-	cp thesis.tex related.tex
-	pdflatex related.tex
-	bibtex related.aux
-	pdflatex related.tex
-	pdflatex related.tex
-	rm related.tex
-
-conclusion.pdf: tConclusion.tex
-
+check:
+	echo $(COMPONENTS)
+	echo $(FIGURES)
+	
 clean:
 	rm -f *.pdf
 	rm -f *.log
@@ -71,4 +29,5 @@ clean:
 	rm -f *.toc
 	rm -f *.bbl
 	rm -f *.blg
-	rm -f $(TEMPFI)
+	rm -f *.dvi
+	rm -f *.ps
